# HW

./: Cargo.toml  README.md  Rapport.md  main.rs
src/: atm328p.rs  esp32.rs  main.rs
src/atm328p/: atm_gpio.rs  atm_i2c.rs  atm_spi.rs  atm_uart.rs
src/esp32/: esp_gpio.rs  esp_i2c.rs  esp_spi.rs  esp_uart.rs
